# wikipedia-scraper

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  wikipedia_source.html
tests/: test_lib.py
wikipedia_scraper/: __init__.py  __main__.py  lib.py  test_lib.py
