[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipsy"
version = "1.0.0"
description = "Scrape wikipedia to get to psychology"
readme = "README.md"
authors = [{ name = "Jayden Qi", email = "jaydeniqv2@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "beautifulsoup4>=4.12.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/JayAndJef/wikipedia-scraper"

[project.scripts]
wikipsy = "wikipedia_scraper.__main__:app"
[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

