[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipsy"
version = "1.2.5"
description = "Scrape wikipedia to get to psychology/philosophy"
readme = "README.md"
authors = [{ name = "Jayden Qi", email = "jaydeniqv2@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
    "beautifulsoup4>=4.12.2",
    "graphviz>=0.20.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/JayAndJef/wikipedia-scraper"

[project.scripts]
wikipsy = "wikipedia_scraper.__main__:app"

